--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -17,7 +17,7 @@ jobs:
 
     - name: Install GO linter
       run: |
-            apt-get install golint
+            sudo apt-get install golint
     
     - name: Run linter
       run: |
